# introduction_pytest

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
basics/src/: inverse.py
basics/tests/: test_first.py  test_inverse.py
exercice/src/: fonctions_difficiles.py
exercice/tests/: test_fonctions.py  test_fonctions_diff
